--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "interface-components",
-  "description": "Modular AngularJS with Angm-generator",
+  "name": "crams-rc-frontend",
+  "description": "CRAMS NeCTAR Portal",
   "version": "0.0.1",
   "install": {
     "path": {
@@ -11,16 +11,23 @@
   "dependencies": {
     "json3": "3.3.1",
     "es5-shim": "3.1.0",
-    "angular": ">=1.3.*",
-    "angular-resource": ">=1.3.*",
-    "angular-aria": ">=1.3.*",
-    "angular-mocks": ">=1.3.*",
-    "angular-cookies": ">=1.3.*",
-    "angular-animate": ">=1.3.*",
-    "angular-sanitize": ">=1.3.*",
-    "angular-ui-router": "~0.2.10"
+    "angular": "^1.5.5",
+    "angular-resource": "^1.5.5",
+    "angular-aria": "^1.5.5",
+    "angular-mocks": "^1.5.5",
+    "angular-cookies": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-ui-router": "~0.2.10",
+    "angular-bootstrap": "~0.13.4",
+    "html5-boilerplate": "~5.2.0",
+    "bootstrap": "~3.3.6",
+    "font-awesome": "~4.5.0",
+    "underscore": "~1.8.3",
+    "ng-dialog": "~0.6.1"
   },
   "resolutions": {
-    "angular": ">=1.3.*"
+    "angular": "^1.5.5"
   }
 }
