--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "angular-seed",
+  "name": "crams-rc-frontend",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "description": "CRAMS NeCTAR Portal",
+  "repository": "https://github.com/NeCTAR-RC/crams-rc-frontend.git",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
     "grunt": "^0.4.5",
-    "grunt-ng-constant": "^2.0.1",
-    "http-server": "^0.6.1",
     "grunt-http-server": "^1.6.0",
     "grunt-karma": "~0.12.2",
-    "jasmine-core": "^2.3.4",
+    "grunt-ng-constant": "^2.0.1",
+    "http-server": "^0.6.1",
+    "jasmine-core": "^2.4.1",
+    "jquery": "~2.2.3",
     "jshint": "^2.5.6",
     "karma": "~0.13.22",
+    "karma-coverage": "^0.5.5",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.2",
-    "karma-coverage": "^0.5.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
   },
